--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,3 +12,20 @@
 - name: "Link user binary."
   command: "{{ apnscp_root }}/bin/scripts/yum-post.php install --update memcached siteinfo"
   notify: "Flush fsmount on install."
+- name: "Get existing pecl_extensions."
+  shell: |
+    cpcmd -o json scope:get cp.bootstrapper pecl_extensions
+  register: r
+- name: "Parse existing and set required pecl_extensions."
+  set_fact:
+    pecl_extensions: "{{ r.stdout|from_json }}"
+    required_pecl:
+      - memcached
+- name: "Add required pecl_extensions."
+  set_fact:
+    pecl_extensions: "{{ (pecl_extensions | type_debug == 'list') | ternary(pecl_extensions, [pecl_extensions]) + [ item.name ] }}"
+  when: item in pecl_extensions
+  with_items: required_pecl
+- name: "Set pecl_extensions via cpcmd."
+  shell: |
+    cpcmd scope:set cp.bootstrapper pecl_extensions '{{pecl_extensions|to_json}}'
